# adopy

./: .editorconfig  .gitignore  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  build.py  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  pytest.yml
adopy/: __init__.py  base.py  cra.py  functions.py  generic.py  generics.py  psi.py  types.py  version.py
adopy/base/: __init__.py  _engine.py  _engine_dg.py  _engine_hr.py  _engine_jax.py  _engine_opt.py  _engine_v0.py  _engine_v1.py  _engine_v2.py  _engine_v3.py  _generic.py  _grid.py  _meta.py  _model.py  _task.py  base.py  engine.py  ex-engine.py  grid.py  model.py  task.py
adopy/functions/: __init__.py  _const.py  _grid.py  _likelihood.py  _math.py  _utils.py
adopy/src/: internals.c  internals.pyx  stats.c  stats.pyx
adopy/task/: cra.py  ddt.py  psi.py
adopy/tasks/: __init__.py  _cra.py  _ddt.py  _psi.py  cra.py  dd.py  ddt.py  psi.py
adopy/tests/: test_psi.py
benchmarks/: cra_adopy_iter_jax.py  cra_adopy_jax.ipynb
doc/source/: conf.py  index.rst
doc/source/intro/: about.rst
docs/: Makefile  conf.py  index.rst  livehtml.bat  make.bat
docs/intro/: basics.rst  example-bak.rst  example.rst
docs/reference/: psi.rst
docs/source/: CNAME  about.rst  base.rst  changelogs.rst  conf.py  contributing.rst  dev-guide.rst  getting-started.md  getting-started.rst  how-to-contribute.rst  index.rst  install.rst  tasks.rst
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
docs/source/api/: base.rst  functions.rst  index.rst  tasks.rst
docs/source/api/tasks/: cra.rst  dd.rst  ddt.rst  psi.rst
docs/source/examples/: choice_under_risk_and_ambiguity.ipynb  cra.ipynb  dd.ipynb  delay_discounting.ipynb  index.rst  psi.rst
docs/source/intro/: example.rst
docs/source/tasks/: cra.rst  ddt.rst  psi.rst
examples/: README.md  cra.ipynb  cra_psychopy.py  ddt_psychopy.py
examples/cra/: cra.ipynb
examples/dd/: dd.ipynb  dd_psychopy_ado.py  dd_psychopy_non-ado.py
misc/: test_engine_jax.ipynb  test_engine_numpy.ipynb  test_jax.ipynb
test/: test_functions.py  test_psi.py
tests/: test_base.py  test_cra.py  test_dd.py  test_ddt.py  test_engine.py  test_functions.py  test_gridspace.py  test_model.py  test_psi.py  test_task.py
