[tool.poetry]
name = "adopy"
version = "0.4.0.rc1"
description = "Adaptive Design Optimization on Experimental Tasks"
authors = ["Jaeyeong Yang <jaeyeong.yang1125@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
homepage = "https://adopy.org"
repository = "https://github.com/adopy/adopy"
documentation = "https://adopy.org"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = ">=3.5"
pandas = "*"
scipy = ">=1.0.0"
numpy = "*"

# Extra packages for testing
pytest = { version = "*", optional = true }
pytest-cov = { version = "*", optional = true }
codecov = { version = "*", optional = true }

# Extra packages for documentation
sphinx = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinx-autobuild = { version = "*", optional = true }
travis-sphinx = { version = "*", optional = true }
recommonmark = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
pylint = "*"
mypy = "*"

[tool.poetry.extras]
test = [
  "pytest",
  "pytest-cov",
  "codecov"
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autobuild",
  "travis-sphinx",
  "recommonmark",
  "sphinxcontrib-rawfiles"
]

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
