[tool.poetry]
name = "adopy"
version = "0.5.0-dev"
description = "Adaptive Design Optimization on Experimental Tasks"
authors = ["Jaeyeong Yang <jaeyeong.yang1125@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
homepage = "https://adopy.org"
repository = "https://github.com/adopy/adopy"
documentation = "https://adopy.org"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
importlib_metadata = { version = "*", python = "<3.8" }
numpy = ">=1.20.0"
scipy = ">=1.7.0"
pandas = ">=1.2.0"
jax = "^0.3"
jaxlib = "*"

# Extra packages for testing
pytest = { version = ">=7.0", optional = true }
pytest-cov = { version = "*", optional = true }
codecov = { version = "*", optional = true }

# Extra packages for documentation
sphinx = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinx-autobuild = { version = "*", optional = true }
recommonmark = { version = "*", optional = true }
sphinx-issues = { version = "*", optional = true }
ipykernel = { version = "*", optional = true }
nbsphinx = { version = "*", optional = true }
matplotlib = { version = "*", optional = true }
jupyterlab = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
build = "^0.7.0"

[tool.poetry.extras]
test = [
  "pytest",
  "pytest-cov",
  "codecov"
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autobuild",
  "recommonmark",
  "sphinxcontrib-rawfiles",
  "sphinx-issues",
  "matplotlib",
  "ipykernel",
  "jupyterlab",
  "nbsphinx"
]

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
secondary = true

[build-system]
requires = ["poetry_core>=1.0.0", 'wheel']
build-backend = "poetry.core.masonry.api"
